--- a/1_pythonIntroduction.ipynb
+++ b/1_pythonIntroduction.ipynb
@@ -26,10 +26,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more information about Python Documentation: [Python Documentation](https://docs.python.org/3/)"
+    "For more information about Python Documentation: [Python Documentation](https://docs.python.org/3/)\n",
+    "\n",
+    "Unlike Matlab, in Python you must load the libraries/packages that you want to use that provide features beyond the basic Python functionalities.  This notebook uses the following:"
    ]
   },
   {
@@ -71,6 +74,24 @@
     "x = x1 + x2\n",
     "print('The type of x is {}'.format(type(x)))\n",
     "print('{} + {} is {}'.format(x1,x2,x))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In notebooks, the variables from previous cells hold their value in future cells.  Here are a few more ways to print `x1` and `x2`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'x1 = {x1}\\tx2 = {x2}\\tx = x1 + x2 = {x}') ## this is an f-string, added in Python 3: https://realpython.com/python-f-strings/\n",
+    "print('x1 = ', x1, 'x2 = ', x2, 'x = x1 + x2 = ', x)"
    ]
   },
   {
@@ -118,6 +139,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Starting in Python 3, interger division produces a real if the ratio is not an integer (in Python 2, `10/3` would produce `3`).  For integer division, use `//`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -154,7 +183,7 @@
     "x=10\n",
     "y=3\n",
     "z = x%y\n",
-    "print('{} Modulus {} is {}'.format(x,y,z))"
+    "print('{} mod {} is {}'.format(x,y,z))"
    ]
   },
   {
@@ -174,7 +203,7 @@
     "x=10\n",
     "y=2\n",
     "z = x%y\n",
-    "print('{} Modulus {} is {}'.format(x,y,z))"
+    "print('{} mod {} is {}'.format(x,y,z))"
    ]
   },
   {
@@ -406,6 +435,26 @@
    ],
    "source": [
     "for i in range(0,3):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [1, 4, 100]:\n",
     "    print(i)"
    ]
   },
@@ -1923,7 +1972,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "ee364",
    "language": "python",
    "name": "python3"
   },
@@ -1937,12 +1986,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:31:59) \n[GCC 11.2.0]"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "75e91639def629d1d99982117d463c2d46805bd5e06104cae1b77458447d0c95"
+    "hash": "6200758b7673adf34ae50bfa4217006f2c557feffe45080c236eaee64db53788"
    }
   }
  },
