--- a/1_pythonIntroduction.ipynb
+++ b/1_pythonIntroduction.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,6 +1680,350 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Arrays vs. Lists"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Similarities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Both are used for storing data\n",
+    "* Both are mutable\n",
+    "* Both can be indexed and iterated through\n",
+    "* Both can be sliced"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Differences "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The main difference between these two data types is the operation you can perform on them. \n",
+    "* Arrays are specially optimised for arithmetic computations so if you’re going to perform similar operations you should consider using an array instead of a list.\n",
+    "* Also lists are containers for elements having differing data types but arrays are used as containers for elements of the same data type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = [1,2,3,4,5] #list\n",
+    "print(type(a_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_array = np.array(a_list) #convert list to array\n",
+    "print(type(a_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5 1.  1.5 2.  2.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([1,2,3,4,5]) #array\n",
+    "y = x/2\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  6  8 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "w  = 2*x\n",
+    "print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m z \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m,\u001b[39m5\u001b[39m] \u001b[39m#list\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m u \u001b[39m=\u001b[39m z\u001b[39m/\u001b[39;49m\u001b[39m2\u001b[39;49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "z = [1,2,3,4,5] #list\n",
+    "u = z/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = 2*z\n",
+    "print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element by element multiplication of arrays\n",
+      "Method 1:  [ 4 10 18]\n",
+      "Method 2:  [ 4 10 18]\n",
+      "Dot Product of arrays:  32\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "b = np.array([4,5,6])\n",
+    "print('Element by element multiplication of arrays')\n",
+    "print('Method 1: ', a*b)\n",
+    "print('Method 2: ', np.multiply(a,b))\n",
+    "print('Dot Product of arrays: ', a@b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list 1 : [1, 2, 3]\n",
+      "Original list 2 : [4, 5, 6]\n",
+      "Element by Element multiplication of lists : [4, 10, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_list1 = [1, 2, 3]\n",
+    "test_list2 = [4, 5, 6]\n",
+    "  \n",
+    "print (\"Original list 1 : \" + str(test_list1))\n",
+    "print (\"Original list 2 : \" + str(test_list2))\n",
+    "\n",
+    "res_list = [test_list1[i] * test_list2[i] for i in range(len(test_list1))]\n",
+    "\n",
+    "print (\"Element by Element multiplication of lists : \" + str(res_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dot product of lists:  32\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dot product of lists: ',  sum([x*y for x,y in zip(test_list1,test_list2)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for @: 'list' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mTesting @ on lists: \u001b[39m\u001b[39m'\u001b[39m, test_list1\u001b[39m@test_list2\u001b[39;49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for @: 'list' and 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "print('Testing @ on lists: ', test_list1@test_list2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy for Matlab users"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MATLAB and NumPy have a lot in common, but NumPy was created to work with Python. For more references, visit: [Numpy vs. Matlab](https://numpy.org/doc/stable/user/numpy-for-matlab-users.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **MATLAB** numbers indices from 1; a(1) is the first element. However, **NumPy**, like Python, numbers indices from 0; a[0] is the first element."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [ 1 2 3; 4 5 6 ] in **Matlab**, whereas np.array([[1., 2., 3.], [4., 5., 6.]]) in **Numpy**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* a(end) in **Matlab**, whereas a[-1] in **Numpy**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* a(2,5) in **Matlab**, whereas a[1, 4] in **Numpy**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* a(2,:) in **Matlab**, whereas a[1] or a[1, :] in **Numpy**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* a(end-4:end,:) in **Matlab**, whereas a[-5:] in **Numpy**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "* a.' in **Matlab**, whereas a.transpose() or a.T in **Numpy**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* a * b in **Matlab**, whereas a @ b in **Numpy**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* a.^3 in **Matlab**, whereas a**3 in **Numpy**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Miscelaneous"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
@@ -1972,7 +2316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ee364",
+   "display_name": "FBA",
    "language": "python",
    "name": "python3"
   },
@@ -1986,12 +2330,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6200758b7673adf34ae50bfa4217006f2c557feffe45080c236eaee64db53788"
+    "hash": "187d0b97bdb7c262d120320963c609ea5e632bc27ed1ec3112d14a83e1efc180"
    }
   }
  },
