added book reference in readme and header in notebooks

--- a/0_anacondaJupyter.ipynb
+++ b/0_anacondaJupyter.ipynb
@@ -5,9 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Author**: Alexios Rustom (arustom@usc.edu)\n",
+    "**Instructors**: Prof. Keith Chugg (chugg@usc.edu) & Prof. Antonio Ortega (aortega@usc.edu)\n",
     "\n",
-    "**Instructors**: Prof. Keith Chugg (chugg@usc.edu) & Prof. Antonio Ortega (aortega@usc.edu)"
+    "**Teaching Assistant**: Alexios Rustom (arustom@usc.edu)\n",
+    "\n",
+    "**Notebooks**: Written by Alexios Rustom (arustom@usc.edu)"
    ]
   },
   {
