--- a/0_anacondaJupyter.ipynb
+++ b/0_anacondaJupyter.ipynb
@@ -151,6 +151,10 @@
     "conda install -n ML ipykernel --update-deps --force-reinstall\n",
     "```\n",
     "\n",
+    "An optional step is to add the [Jupyter Qt Console](https://qtconsole.readthedocs.io/en/stable/):\n",
+    "\n",
+    "```conda install qtconsole```\n",
+    "\n",
     "The above will allow you to run the notbeooks we plan to use up to, but not including `dataLoadingGenerationVisualization.ipynb`.  To run this one, you need to run the following:\n",
     "\n",
     "```\n",
@@ -229,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.12 | packaged by conda-forge | (default, Sep 29 2021, 19:21:23) \n[Clang 11.1.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
