--- a/4_mathematicalOptimization.ipynb
+++ b/4_mathematicalOptimization.ipynb
@@ -396,21 +396,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Algorithms steps:\n",
-    "**input**: Initial point $\\bm{w}^0$, maximum number of steps $K$, number of random samples per step $P$, a steplength $\\alpha$ or diminishing steplength rule\n",
+    "**input**: Initial point $\\mathbf{w}^0$, maximum number of steps $K$, number of random samples per step $P$, a steplength $\\alpha$ or diminishing steplength rule\n",
     "\n",
     "**for** $k = 1 \\cdots K$:\n",
-    "  * Compute $P$ unit length random directions $\\{\\bm{d}^p\\}_{p=1}^P$\n",
-    "  * find $s = \\underset{p}{\\operatorname{\\argmin}} \\quad g(\\bm{w}^{k-1}+\\alpha\\bm{d}^p)$\n",
-    "  * Set $\\bm{d}^k=\\bm{d}^s$\n",
-    "  * Form a new point $\\bm{w}^k = \\bm{w}^{k-1} + \\alpha\\bm{d}^k$\n",
-    "  * if $g(\\bm{w}^k) <g(\\bm{w}^{k-1})$\n",
-    "    * $\\bm{w}^{k-1} \\leftarrow \\bm{w}^k$\n",
+    "  * Compute $P$ unit length random directions $\\{\\mathbf{d}^p\\}_{p=1}^P$\n",
+    "  * find $s = \\underset{p}{\\operatorname{\\argmin}} \\quad g(\\mathbf{w}^{k-1}+\\alpha\\mathbf{d}^p)$\n",
+    "  * Set $\\mathbf{d}^k=\\mathbf{d}^s$\n",
+    "  * Form a new point $\\mathbf{w}^k = \\mathbf{w}^{k-1} + \\alpha\\mathbf{d}^k$\n",
+    "  * if $g(\\mathbf{w}^k) <g(\\mathbf{w}^{k-1})$\n",
+    "    * $\\mathbf{w}^{k-1} \\leftarrow \\mathbf{w}^k$\n",
     "\n",
-    "**output**: History of weights $\\{\\bm{w}^k\\}_{k=0}^K$ and corresponding function evaluations $\\{g(\\bm{w}^k)\\}_{k=0}^K$"
+    "**output**: History of weights $\\{\\mathbf{w}^k\\}_{k=0}^K$ and corresponding function evaluations $\\{g(\\mathbf{w}^k)\\}_{k=0}^K$"
    ]
   },
   {
@@ -653,6 +654,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -660,7 +662,7 @@
     "\n",
     "- Here we re-run the random local search algorithm using the same simple quadratic and algorithm settings:\n",
     "\n",
-    "- $g(w) = \\bm{w^T}\\bm{w} + 2$.\n",
+    "- $g(w) = \\mathbf{w^T}\\mathbf{w} + 2$.\n",
     "\n",
     "- Now we initialize at the point $\\mathbf{w}^0 = \\begin{bmatrix} 1.5 \\\\ 2 \\end{bmatrix}$ which prevents the algorithm from reaching the function's global minimum.  "
    ]
@@ -734,12 +736,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Setting the steplength parameter $\\alpha$ smaller we can look again make another run mirroring the one performed above, with much better results.  \n",
     "\n",
-    "- $g(w) = \\bm{w^T}\\bm{w} + 2$.\n",
+    "- $g(w) = \\mathbf{w^T}\\mathbf{w} + 2$.\n",
     "\n",
     "- Below we make the same run as above except now we set $\\alpha = 0.1$ for all steps.  Running the algorithm now we can see that it converges to a point much closer to the global minimum of the function at $\\mathbf{w} = \\begin{bmatrix} 0 \\\\ 0 \\end{bmatrix}$."
    ]
@@ -780,12 +783,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Remember however that we need to be careful in choosing the steplength value with this simple quadratic, and by extension any general function.  \n",
     "\n",
-    "- $g(w) = \\bm{w^T}\\bm{w} + 2$.\n",
+    "- $g(w) = \\mathbf{w^T}\\mathbf{w} + 2$.\n",
     "\n",
     "- If - for example - we run the same experiment again but cut the steplength down to $\\alpha = 0.01$ we do not reach a point anywher near the global minimum, as we show by performing the same run but setting $\\alpha$ to this value.  "
    ]
@@ -877,23 +881,25 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Coordinate Search Algorithm\n",
-    "- **Input**: Initial point $\\bm{w}^0$, maximum number of steps $K$, a steplength $\\alpha$ or diminishing steplength rule, take the set of directions $\\bm{d}^{2n-1}$ and $\\bm{d}^{2n} = -\\bm{e}_n$ for $n=1 \\cdots N$ and set $P=2N$\n",
+    "- **Input**: Initial point $\\mathbf{w}^0$, maximum number of steps $K$, a steplength $\\alpha$ or diminishing steplength rule, take the set of directions $\\mathbf{d}^{2n-1}$ and $\\mathbf{d}^{2n} = -\\mathbf{e}_n$ for $n=1 \\cdots N$ and set $P=2N$\n",
     "\n",
     "$\\quad$ **for** $k = 1 \\cdots K$:\n",
-    "  * find $s = \\underset{p}{\\operatorname{\\argmin}} g(\\bm{w}^{k-1}+\\alpha\\bm{d}^p)$\n",
-    "  * Set $\\bm{d}^k=\\bm{d}^s$\n",
-    "  * Form a new point $\\bm{w}^k = \\bm{w}^{k-1} + \\alpha\\bm{d}^k$\n",
-    "  * if $g(\\bm{w}^k)<g(\\bm{w}^{k-1})$\n",
-    "    * $\\bm{w}^{k-1} \\leftarrow \\bm{w}^k$\n",
+    "  * find $s = \\underset{p}{\\operatorname{\\argmin}} g(\\mathbf{w}^{k-1}+\\alpha\\mathbf{d}^p)$\n",
+    "  * Set $\\mathbf{d}^k=\\mathbf{d}^s$\n",
+    "  * Form a new point $\\mathbf{w}^k = \\mathbf{w}^{k-1} + \\alpha\\mathbf{d}^k$\n",
+    "  * if $g(\\mathbf{w}^k)<g(\\mathbf{w}^{k-1})$\n",
+    "    * $\\mathbf{w}^{k-1} \\leftarrow \\mathbf{w}^k$\n",
     "\n",
-    "**output**: History of weights $\\{\\bm{w}^k\\}_{k=0}^K$ and corresponding function evaluations $\\{g(\\bm{w}^k)\\}_{k=0}^K$"
+    "**output**: History of weights $\\{\\mathbf{w}^k\\}_{k=0}^K$ and corresponding function evaluations $\\{g(\\mathbf{w}^k)\\}_{k=0}^K$"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -903,18 +909,18 @@
     "\n",
     "This twist on the coordinate search approach is called a coordinate descent, since each step evaluates a single coordinate direction and decides whether or not to move in this direction alone. This particular algorithm - while itself being the most effective zero order method we have seen thus far by far\n",
     "\n",
-    "**Input**: Initial point $\\bm{w}^0$, maximum number of steps $K$, a steplength $\\alpha$ or diminishing steplength rule\n",
+    "**Input**: Initial point $\\mathbf{w}^0$, maximum number of steps $K$, a steplength $\\alpha$ or diminishing steplength rule\n",
     "\n",
     "**for** $k = 1 \\cdots K$:\n",
     "\n",
     "$\\quad$ **for** $n = 1 \\cdots N$:\n",
-    "  * find $s = \\underset{}{\\operatorname{\\argmin}} \\{g(\\bm{w}^{k+n-1}+\\alpha\\bm{e}_n), g(\\bm{w}^{k+n-1}-\\alpha\\bm{e}_n)\\}$\n",
-    "  * Set $\\bm{d}^{k+n}=(-1)^s\\bm{e}_n$\n",
-    "  * Form a new point $\\bm{w}^{k+n} = \\bm{w}^{k+n-1} + \\alpha\\bm{d}^{k+n}$\n",
-    "  * if $g(\\bm{w}^{k+n})<g(\\bm{w}^{k+n-1})$\n",
-    "    * $\\bm{w}^{k+n-1} \\leftarrow \\bm{w}^{k+n}$\n",
+    "  * find $s = \\underset{}{\\operatorname{\\argmin}} \\{g(\\mathbf{w}^{k+n-1}+\\alpha\\mathbf{e}_n), g(\\mathbf{w}^{k+n-1}-\\alpha\\mathbf{e}_n)\\}$\n",
+    "  * Set $\\mathbf{d}^{k+n}=(-1)^s\\mathbf{e}_n$\n",
+    "  * Form a new point $\\mathbf{w}^{k+n} = \\mathbf{w}^{k+n-1} + \\alpha\\mathbf{d}^{k+n}$\n",
+    "  * if $g(\\mathbf{w}^{k+n})<g(\\mathbf{w}^{k+n-1})$\n",
+    "    * $\\mathbf{w}^{k+n-1} \\leftarrow \\mathbf{w}^{k+n}$\n",
     "\n",
-    "**output**: History of weights $\\{\\bm{w}^k\\}_{k=0}^{KN}$ and corresponding function evaluations $\\{g(\\bm{w}^k)\\}_{k=0}^{KN}$"
+    "**output**: History of weights $\\{\\mathbf{w}^k\\}_{k=0}^{KN}$ and corresponding function evaluations $\\{g(\\mathbf{w}^k)\\}_{k=0}^{KN}$"
    ]
   },
   {
@@ -1043,10 +1049,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$g(w) = \\bm{w^T}\\bm{w} + 2$."
+    "$g(w) = \\mathbf{w^T}\\mathbf{w} + 2$."
    ]
   },
   {
