--- a/4_mathematicalOptimization.ipynb
+++ b/4_mathematicalOptimization.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "**Book**: Watt, J., Borhani, R., & Katsaggelos, A. K. (2020). Machine learning refined: Foundations, algorithms, and applications. Cambridge University Press.\n",
     "\n",
-    "**Notebooks**: Written by Alexios Rustom (arustom@usc.edu) and based on the following **Github repository**: [notebooks](https://github.com/jermwatt/machine_learning_refined/tree/gh-pages/presentations/2nd_edition/jupyter%20%2B%20reveal.js%20version)"
+    "**Notebooks**: Written by Alexios Rustom (arustom@usc.edu) and Prof. Keith Chugg. These notebooks are based on the following **Github repository**: [notebooks](https://github.com/jermwatt/machine_learning_refined/tree/gh-pages/presentations/2nd_edition/jupyter%20%2B%20reveal.js%20version)"
    ]
   },
   {
