--- a/toy_python.ipynb
+++ b/toy_python.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Instructors**: Prof. Keith Chugg (chugg@usc.edu) & Prof. Antonio Ortega (aortega@usc.edu)\n",
+    "\n",
+    "**Teaching Assistant**: Alexios Rustom (arustom@usc.edu)\n",
+    "\n",
+    "**Notebooks**: Written by Prof. Keith Chugg (chugg@usc.edu)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
