--- a/1_pythonIntroduction.ipynb
+++ b/1_pythonIntroduction.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Teaching Assistant**: Alexios Rustom (arustom@usc.edu)\n",
     "\n",
-    "**Notebooks**: Written by Alexios Rustom (arustom@usc.edu)"
+    "**Notebooks**: Written by Alexios Rustom (arustom@usc.edu) and Prof. Keith Chugg (chugg@usc.edu)"
    ]
   },
   {
