--- a/0_anacondaJupyter.ipynb
+++ b/0_anacondaJupyter.ipynb
@@ -217,7 +217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ee364",
+   "display_name": "FBA",
    "language": "python",
    "name": "python3"
   },
@@ -231,12 +231,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12 | packaged by conda-forge | (default, Sep 29 2021, 19:21:23) \n[Clang 11.1.0 ]"
+   "version": "3.9.7 (default, Sep 16 2021, 08:50:36) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6200758b7673adf34ae50bfa4217006f2c557feffe45080c236eaee64db53788"
+    "hash": "187d0b97bdb7c262d120320963c609ea5e632bc27ed1ec3112d14a83e1efc180"
    }
   }
  },
