added a jupyter notebook package installation

--- a/0_anacondaJupyter.ipynb
+++ b/0_anacondaJupyter.ipynb
@@ -148,6 +148,7 @@
     "conda install seaborn\n",
     "conda install matplotlib\n",
     "conda install scikit-learn\n",
+    "python -m pip install jupyter notebook -U\n",
     "conda install -n ML ipykernel --update-deps --force-reinstall\n",
     "```\n",
     "\n",
@@ -196,6 +197,7 @@
     "conda install seaborn\n",
     "conda install matplotlib\n",
     "conda install scikit-learn\n",
+    "python -m pip install jupyter notebook -U\n",
     "conda install -n ML ipykernel --update-deps --force-reinstall\n",
     "mkdir generatedData\n",
     "conda install openpyxl\n",
