updated python Introduction Review

--- a/1_pythonIntroduction.ipynb
+++ b/1_pythonIntroduction.ipynb
@@ -1817,7 +1817,7 @@
     }
    ],
    "source": [
-    "z = [1,2,3,4,5] #list\n",
+    "z = [1,2,3,4,5] #list: we cannot apply division on lists, this will give an error\n",
     "u = z/2"
    ]
   },
@@ -1926,7 +1926,7 @@
     }
    ],
    "source": [
-    "print('Testing @ on lists: ', test_list1@test_list2)"
+    "print('Testing @ on lists: ', test_list1@test_list2) #cannot apply @ on lists, this will give an error"
    ]
   },
   {
