--- a/7.1_mnist_multiclass_mse.ipynb
+++ b/7.1_mnist_multiclass_mse.ipynb
@@ -26,7 +26,41 @@
    "source": [
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
-    "from utils.previous_notebooks import load_MNIST_data"
+    "from torchvision import datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_MNIST_data(data_path, fashion=False, quiet=False):\n",
+    "    if not fashion:\n",
+    "        train_set = datasets.MNIST(data_path, download=True, train=True)\n",
+    "        test_set = datasets.MNIST(data_path, download=True, train=False)\n",
+    "    else:\n",
+    "        train_set = datasets.FashionMNIST(data_path, download=True, train=True)\n",
+    "        test_set = datasets.FashionMNIST(data_path, download=True, train=False)      \n",
+    "    x_train = train_set.data.numpy()\n",
+    "    y_train = train_set.targets.numpy()\n",
+    "\n",
+    "    x_test = test_set.data.numpy()\n",
+    "    y_test = test_set.targets.numpy()\n",
+    "    \n",
+    "    N_train, H, W = x_train.shape\n",
+    "    N_test, H, W = x_test.shape\n",
+    "\n",
+    "    if not quiet:\n",
+    "        print(f'The data are {H} x {W} grayscale images.')\n",
+    "        print(f'N_train = {N_train}')\n",
+    "        print(f'N_test = {N_test}')\n",
+    "    for i in set(y_train):\n",
+    "        N_i_train = np.sum(y_train==i)\n",
+    "        N_i_test = np.sum(y_test==i)\n",
+    "        if not quiet:\n",
+    "            print(f'Class {i}: has {N_i_train} train images ({100 * N_i_train / N_train : .2f} %), {N_i_test} test images ({100 * N_i_test/ N_test : .2f} %) ')\n",
+    "    return x_train, y_train, x_test, y_test"
    ]
   },
   {
@@ -40,26 +74,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-images-idx3-ubyte.gz to ./data/FashionMNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/FashionMNIST/raw/train-images-idx3-ubyte.gz to ./data/FashionMNIST/raw\n",
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/train-labels-idx1-ubyte.gz to ./data/FashionMNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/FashionMNIST/raw/train-labels-idx1-ubyte.gz to ./data/FashionMNIST/raw\n",
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-images-idx3-ubyte.gz to ./data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/FashionMNIST/raw/t10k-images-idx3-ubyte.gz to ./data/FashionMNIST/raw\n",
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz to ./data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/FashionMNIST/raw/t10k-labels-idx1-ubyte.gz to ./data/FashionMNIST/raw\n",
+      "\n",
       "The data are 28 x 28 grayscale images.\n",
       "N_train = 60000\n",
       "N_test = 10000\n",
-      "Class 0: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n",
-      "Class 1: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n",
-      "Class 2: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n",
-      "Class 3: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n",
-      "Class 4: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n",
-      "Class 5: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n",
-      "Class 6: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n",
-      "Class 7: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n",
-      "Class 8: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n",
-      "Class 9: has 6000 images ( 10.00 %), 6000 test images ( 10.00 %) \n"
+      "Class 0: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n",
+      "Class 1: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n",
+      "Class 2: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n",
+      "Class 3: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n",
+      "Class 4: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n",
+      "Class 5: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n",
+      "Class 6: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n",
+      "Class 7: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n",
+      "Class 8: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n",
+      "Class 9: has 6000 train images ( 10.00 %), 1000 test images ( 10.00 %) \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -88,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +265,7 @@
        "Text(0, 0.5, '$|| {\\\\bf w}_m ||$')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mls23",
+   "display_name": "EE499_ML",
    "language": "python",
    "name": "python3"
   },
@@ -364,12 +473,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7f2b55be8af22e299bb14a990e5306b14c0e04e0c371124ebf94aa533852bd32"
+    "hash": "1837a56ff6317400afe8f3ddb47b2c33c41130d8cbbd55e890b72602c954d6cc"
    }
   }
  },
