--- a/7.1_mnist_multiclass_mse.ipynb
+++ b/7.1_mnist_multiclass_mse.ipynb
@@ -228,7 +228,7 @@
     "After solving the MSE regression with these ${\\bf Y}$ targets, we classify by maximizing over $g_m({\\bf x}) = {\\bf w}_m {\\bf x}$.  This can be viewed as doing a one-vs-rest (OvR) approach where each of the $C$ classifiers are designed as binary MSE classifiers, then using the fushion/decision rule of choosing the max.  Alternatively, it is a Maximal Value Method (MVM) where the weight vectors are optimized with the MSE criterion and the multiclass targets.  \n",
     "\n",
     "We will use the `np.linalg.lstsq()` routine to solve the MSE regression problem.  This is the pseudo-inverse appoach, not gradient descent!\n",
-    "The `np.linalg.lstsq()` routine can handle passing the matrix targets ${\\bf Y}$ instead of vector targets ${\\bf y}_c_$ -- i.e., the $c$-th column of ${\\bf Y}$.  One call with a matrix of targets is equivalent to $C$ calls with the associated vectors targets $\\{{\\bf y}_c\\}_{c=1}^C$."
+    "The `np.linalg.lstsq()` routine can handle passing the matrix targets ${\\bf Y}$ instead of vector targets ${\\bf y}_c$ -- i.e., the $c$-th column of ${\\bf Y}$.  One call with a matrix of targets is equivalent to $C$ calls with the associated vectors targets $\\{{\\bf y}_c\\}_{c=1}^C$."
    ]
   },
   {
